# sdl_game_tutorial

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
cmake/gtest/: CMakeLists.txt
cmake/sdl_img/: CMakeLists.txt
cmake/sdl_mixer/: CMakeLists.txt
src/: main.cpp
src/datatypes/: rectangle2D.h  size.h  vector2.h
src/input/: key_state.h  keyboard.cpp  keyboard.h  keyboard_state.h  mouse.h  mouse_state.h
src/sdl/: sdl_event_handler.cpp  sdl_event_handler.h  sdl_game_state_manager.cpp  sdl_game_state_manager.h  sdl_image.cpp  sdl_image.h  sdl_screen_handler.cpp  sdl_screen_handler.h  sdl_spritesheet.cpp  sdl_spritesheet.h  sdl_timer.cpp  sdl_timer.h
src/singleton/: singleton.h  uncopyable.h
src/state/: game_state_manager.cpp  game_state_manager.h  igame_state.h  igame_state_manager.h
